rearranged files in 2 subdirectories:
- 0_DOWNLOAD_data_from_CORIOLISftp manages the downloading-check-build of the CORIOLIS dataset
- 1_BUILD_CHECKED_DATASET  manags the checks (1,2,5,8,Adj,Delayed) and rename anotherdataset CORIOLIS_QCed

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 
 # output dir of the downloader script 
 CORIOLIS/
+
+bit.sea/
+BUILD_CHECKED_DATASET/bit.sea/
+DOWNLOAD_data_from_CORIOLISftp/bit.sea/
