--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,10 @@
 CORIOLIS/
 
 bit.sea/
-BUILD_CHECKED_DATASET/bit.sea/
-DOWNLOAD_data_from_CORIOLISftp/bit.sea/
+1_BUILD_CHECKED_DATASET/bit.sea/
+0_DOWNLOAD_data_from_CORIOLISftp/bit.sea/
+
+
+__pycache__
+0_DOWNLOAD_data_from_CORIOLISftp/__pycache__
+1_BUILD_CHECKED_DATASET/__pycache__
