Remove 0_DOWNLOAD_data_from_CORIOLISftp directory from SEANOE branch

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,22 @@ slurm*out
 1_BUILD_CHECKED_DATASET/DISCARDED_CSV
 1_BUILD_CHECKED_DATASET/job_checks_launcher_cp
 *.csv
+
+
+# output dir of the downloader script 
+1_BUILD_CHECKED_DATASET_copy_to_be_fixed
+1_BUILD_CHECKED_DATASET/*csv
+1_BUILD_CHECKED_DATASET/*.tar.gz
+1_BUILD_CHECKED_DATASET/*out
+1_BUILD_CHECKED_DATASET/bit.sea
+1_BUILD_CHECKED_DATASET/__pycache__
+1_BUILD_CHECKED_DATASET/opa_profile.inc
+
+
+2_DATASET_ANALYSIS/*csv
+2_DATASET_ANALYSIS/FIGURES
+2_DATASET_ANALYSIS/*png
+2_DATASET_ANALYSIS/old
+2_DATASET_ANALYSIS/SLURMS
+
+
